📦 NEW: setup service work for udpate and offline support

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://fav.farm/🇳🇬" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="A Simple Realtime Typing Trainer" />
-    <link rel="apple-touch-icon" href="https://fav.farm/🇳🇬" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="description" content="Practice and improve your typing speed with real-time feedback" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Realtime Typing Trainer</title>
+    <title>Typing Trainer</title>
   </head>
   <body>
     <div id="app"></div>
